fixed spacing between buttons on rl page

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -103,7 +103,6 @@
 #submit_btn {
   margin-bottom: 5%;
   margin-top: 5%;
-  margin-right: 7.5%;
   background: #3d6ab1;
   color: #ffffff;
   border-radius: 5px;
@@ -117,7 +116,7 @@
 #lgtm_btn {
   margin-bottom: 5%;
   margin-top: 5%;
-  margin-right: 7.5%;
+  margin-right: 2%;
   background: #3d6ab1;
   color: #ffffff;
   border-radius: 5px;
